sql/wsrep_var.h
@@ -105,6 +105,7 @@ extern bool wsrep_debug_update               UPDATE_ARGS;
 
 extern bool wsrep_gtid_seq_no_check          CHECK_ARGS;
 
+extern bool wsrep_gtid_domain_id_update      UPDATE_ARGS;
 #else  /* WITH_WSREP */
 
 #define wsrep_provider_init(X)
